welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:64: error: Invalid literal number
	for (lignes<-1to3) {
                     ^PictureMono3:90: error: ')' expected but '}' found.
}
^